# of-spmm

./: .gitignore  CMakeLists.txt  Cargo.toml  build.rs  dev-requirements.txt  rn50_dtr.py
.github/workflows/: canary.yml  release.yml
cmake/: oneflow.cmake
crates/oneflow_deps/: Cargo.toml  build.rs
crates/oneflow_proto_py/: Cargo.toml  README.md  build.rs
docs/source/: distributed.rst
oneflow/core/actor/: repeat_compute_actor.cpp
oneflow/core/autograd/: autograd_engine.cpp
oneflow/core/common/: Cargo.toml  spin_counter.cpp
oneflow/core/eager/: dtr_eager_blob_object.cpp  lazy_job_phy_instr_operand.cpp  opkernel_instruction_type.cpp  release_tensor_instruction_type.cpp
oneflow/core/embedding/: cache.h  cached_key_value_store.cu  embedding_manager.h  full_cache.cu  key_value_store.h  persistent_table.cpp
oneflow/core/framework/: dtype.cpp  instructions_builder.cpp  instructions_builder.h  tmp_compute_stream_type_guard.h
oneflow/core/functional/: functional_api.yaml
oneflow/core/graph_impl/: dst_subset_tick_compute_task_node.cpp  src_subset_tick_compute_task_node.cpp
oneflow/core/job/: job_build_and_infer_ctx.cpp  job_conf.proto  nd_sbp_util.cpp  plan_util.cpp
oneflow/core/job_rewriter/: auto_mixed_precision.cpp  auto_parallel.cpp  auto_train_step.cpp  checkpointing_pass.cpp  fuse_bce_reduce_mean_fw_bw_pass.cpp  fuse_embedding_interaction_pass.cpp  insert_nccl_logical_op_pass.cpp  replace_embedding_ops_pass.cpp
oneflow/core/kernel/: image_decoder_random_crop_resize_kernel.cpp
oneflow/ir/: CMakeLists.txt
python/oneflow/: __init__.py
(+85 files in other folders)
