[package]
name = "oneflow"
version = "0.7.0"
edition = "2021"

[workspace]

members = [
    "crates/oneflow_proto_py",
    "crates/oneflow_deps",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
cmake = "0.1"
glob = "0.3.0"
jobserver = "0.1"
